--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,6 @@ indexmap = "2.0"
 
 # Styling and layout
 cssparser = "0.31"
-taffy = "0.3"  # Flexbox layout engine
 palette = "0.7"
 
 # Utilities
@@ -36,12 +35,14 @@ anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
+chrono = { version = "0.4", features = ["serde"] }
 once_cell = "1.19"
 tracing = "0.1"
 bitflags = "2.4"
 tracing-subscriber = "0.3"
 
 # Proc macros
+tui-framework-macros = { path = "./tui-framework-macros" }
 proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "2.0", features = ["full"] }
@@ -77,6 +78,22 @@ path = "examples/calculator.rs"
 [[example]]
 name = "todo_app"
 path = "examples/todo_app.rs"
+
+[[example]]
+name = "table_demo"
+path = "examples/table_demo.rs"
+
+[[example]]
+name = "progress_demo"
+path = "examples/progress_demo.rs"
+
+[[example]]
+name = "modal_demo"
+path = "examples/modal_demo.rs"
+
+[[example]]
+name = "menu_demo"
+path = "examples/menu_demo.rs"
 
 [[example]]
 name = "backend_test"
